<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:background="@drawable/card_background">

        <TextView
            android:text="@string/join_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:fontFamily="sans-serif-light"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:text="@string/shipper_type_prompt"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif-bold"/>

            <Switch
                android:id="@+id/shipper_type"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textOn="Business"
                android:textOff="Personal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/first_name"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/first_name_prompt"
                android:singleLine="true"
                android:nextFocusDown="@+id/last_name"/>

            <EditText
                android:id="@+id/last_name"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/last_name_prompt"
                android:singleLine="true"/>

        </LinearLayout>

        <EditText
            android:id="@+id/email_address"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/email_address_prompt"
            android:inputType="textEmailAddress"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/company_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/company_name_prompt"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/password_prompt"
            android:inputType="textPassword"
            android:singleLine="true"/>

        <Button
            android:id="@+id/join_button"
            android:text="@string/join_button"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-bold"/>

        </LinearLayout>

    <TextView
        android:id="@+id/selected_environment"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center"/>
</RelativeLayout>
